--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
       <h5>Bienvenido a HEALX</h5>
       <input class="controls" type="text" name="usuario" value="" placeholder="Usuario" required>
       <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña" required>
-      <input routerLink="/inventory" class="buttons" type="submit" name="" value="Ingresar" >
+      <input routerLink="/list-medicamento" class="buttons" type="submit" name="" value="Ingresar" >
       <p><a href="#">¿Olvidastes tu Contraseña?</a></p>
 
     </section>
